--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sumisinha.github.io/Resume",
+  "homepage": "https://sumisinha.github.io/Resume/",
   "name": "my-resume",
   "version": "0.1.0",
   "private": true,
